Fixed layout issues for smartphones.

--- a/src/main/webapp/resources/less/frontend/grids/grid-team.less
+++ b/src/main/webapp/resources/less/frontend/grids/grid-team.less
@@ -35,7 +35,10 @@
     .description {
       margin-left: 125px;
       padding-right: 5.5%;
-      text-align: justify;
+      text-align: left;
+      @media @pure-sm {
+        text-align: justify;
+      }
       h3 {
         margin: 0;
         padding: 0;
